Fixed off center issue

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -90,6 +90,11 @@ main {
   .team-outreach {
     grid-area: outreach;
   }
+  .first-link {
+    grid-area: firstimage;
+    margin: auto;
+    border-radius: 50%;
+  }
   .first-image {
     grid-area: firstimage;
     margin: auto;
